# n-body-simulation

./: .gitignore  Cargo.toml  README.md  batch.bat  build.rs  main.cpp  n-body-simulation.sln  n-body-simulation.vcxproj  n-body-simulation.vcxproj.filters
scripts/: imageResize.rs
src/: camera.rs  compute.wgsl  fragment.wgsl  gen.rs  headless.rs  lib.rs  main.rs  model.rs  render.rs  shader.vert  shader.wgsl  state.rs  texture.rs  vertex.wgsl
src/header/: linmath.h  main.h
src/headless/: state.rs
src/headless/state/: display.rs
src/render/: state.rs
src/render/state/: display.rs
src/shaders/: compute.wgsl  draw.wgsl
src/state/: camera.rs  instance.rs  vertex.rs
