[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
wgpu = "0.15.0"
pollster = "0.3.0"
cgmath = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]