[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
wgpu = "0.15.0"
pollster = "0.2"
cgmath = "0.18"
instant = "0.1"
bytemuck = { version = "1.12", features = [ "derive" ] }
tobj = { version = "3.2", features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"