[package]
name = "nbodysim"
version = "1.0.0"
edition = "2021"

[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"
cgmath = "0.18.0"
raw-window-handle = "0.5.2"
rand = "0.8.4"
rand_distr = "0.4.1"
ron = "0.8.0"
serde = "1.0.104"
futures = "0.3.28"
bytemuck = {version = "1.13.1", features = ["derive"]}
serde_json = "1.0"
pollster = "0.3.0"

[build-dependencies]
glsl-to-spirv = "0.1.7"
